--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Paivakirja"></activity>
+        <activity android:name=".ProfileActivity_1"></activity>
+        <activity android:name=".Paivakirja" />
         <activity android:name=".Diagrammi" />
         <activity android:name=".MainActivity">
             <intent-filter>
