--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<!--<<<<<<< HEAD-->
-<!--=======-->
         <activity android:name=".ProfileActivity_1"></activity>
-<!--&gt;>>>>>> 02c34fe5f279c258d85461bceced67921b5b07a5-->
+        <activity android:name=".date_layout"></activity>
         <activity android:name=".Paivakirja" />
         <activity android:name=".Diagrammi" />
         <activity android:name=".MainActivity">
