--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileActivity_1"></activity>
-        <activity android:name=".date_layout"></activity>
+        <activity android:name=".ProfileActivity_1" />
+        <activity android:name=".date_layout" />
         <activity android:name=".Paivakirja" />
         <activity android:name=".Diagrammi" />
         <activity android:name=".MainActivity">
